feat(workflow): setup publish.yml correctly

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish Website
 
 on:
   push:
-    tags:
-      - '*-release'
+    paths:
+      - 'version.txt' 
 
 jobs:
   build-and-deploy:
