--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Clear Cloudflare Cache
         uses: Cyb3r-Jak3/action-cloudflare-cache@v2.0.0
         with:
-          zone: resonite.com
+          zone: ${{ secrets.CLOUDFLARE_ZONE_ID }}
           api_token: ${{ secrets.CLOUDFLARE_TOKEN }}
