--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         run: ssh-keyscan -H ${{ secrets.WEB_SERVER_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy with rsync
-        run: rsync -avz --exclude=.github/ --exclude=.git/ -e ssh . ${{ secrets.WEB_SERVER_USERNAME }}@${{ secrets.WEB_SERVER_HOST }}:/home/ydm/resonite
+        run: rsync -avz -g --exclude=.github/ --exclude=.git/ -e ssh . ${{ secrets.WEB_SERVER_USERNAME }}@${{ secrets.WEB_SERVER_HOST }}:/home/ydm/resonite
       - name: Clear Cloudflare Cache
         uses: Cyb3r-Jak3/action-cloudflare-cache@v2.0.0
         with:
